--- a/Ranwildimail_Admin_BE/package.json
+++ b/Ranwildimail_Admin_BE/package.json
@@ -16,5 +16,11 @@
     "md5": "^2.3.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15"
-  }
+  },
+  "main": "app.js",
+  "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
