--- a/Ranwildimal_Admin_FE/package.json
+++ b/Ranwildimal_Admin_FE/package.json
@@ -13,12 +13,13 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
+    "reactjs-popup": "^2.0.5",
     "recharts": "^2.1.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build",
+    "build": "react-scripts build --openssl-legacy-provider",
+    "start": "react-scripts start --openssl-legacy-provider",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
