--- a/Ranwildimal_Admin_FE/package.json
+++ b/Ranwildimal_Admin_FE/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@jridgewell/trace-mapping": "^0.3.4",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.2",
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "clsx": "^1.1.1",
     "md5": "^2.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
