--- a/Ranwildimal_Admin_FE/package.json
+++ b/Ranwildimal_Admin_FE/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
+    "firebase": "^9.6.11",
     "md5": "^2.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
