--- a/Ranwildimal_Admin_FE/package.json
+++ b/Ranwildimal_Admin_FE/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
     "md5": "^2.3.0",
+    "mdbreact": "^5.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
