--- a/Ranwildimal_Admin_FE/package.json
+++ b/Ranwildimal_Admin_FE/package.json
@@ -8,7 +8,8 @@
     "@jridgewell/trace-mapping": "^0.3.4",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@mui/material": "^5.6.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
